cambio del href en dos  li

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=HLmGfhxUg-0" target="_blank">opcion 1</li>
                 <li><a href="https://www.youtube.com/watch?v=vCqmDng4MS8" target="_blank">opcion 2</li>
-                <li><a href="https://www.youtube.com/watch?v=aKauN27qoYM" target="_blank">opcion 3</li>                   
-                <li><a href="https://www.youtube.com/watch?v=HJERzGoZAHA" target="_blank">opcion 4</li>
+                <li><a href="" target="">opcion 3</li>                   
+                <li><a href="" target="">opcion 4</li>
             </ul>
         </nav>
     </body>
