hiperviculo para ir a secciones

--- a/index.html
+++ b/index.html
@@ -22,9 +22,23 @@
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=HLmGfhxUg-0" target="_blank">opcion 1</li>
                 <li><a href="https://www.youtube.com/watch?v=vCqmDng4MS8" target="_blank">opcion 2</li>
-                <li><a href="" target="">opcion 3</li>                   
+                <li><a href="#opcion_3" target="">opcion 3</li>                   
                 <li><a href="" target="">opcion 4</li>
             </ul>
         </nav>
+        <section>
+            <h4>Sección 1</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Accusantium animi tenetur, distinctio mollitia expedita hic
+            quis nemo sit aspernatur consectetur quod explicabo quam cumque
+            eligendi iusto dolores repellat ab. Cupiditate!</p>         
+        </section>
+        <section id="opcion_3">
+            <h5>Sección 2</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Amet tempora fuga dolorem accusamus cupiditate aperiam inventore
+            nesciunt commodi sapiente animi pariatur laudantium sunt, voluptates,
+            facere, obcaecati voluptatem impedit voluptatibus! Placeat!</p>
+        </section>
     </body>
 </html>
