--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
             </ul>
         </nav>
         <section>
-            <h4>Sección 1</h4>
+            <h4>artículo 1</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Accusantium animi tenetur, distinctio mollitia expedita hic
             quis nemo sit aspernatur consectetur quod explicabo quam cumque
             eligendi iusto dolores repellat ab. Cupiditate!</p>         
         </section>
         <section id="opcion_3">
+            <h5>artículo 2</h5>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Amet tempora fuga dolorem accusamus cupiditate aperiam inventore
             nesciunt commodi sapiente animi pariatur laudantium sunt, voluptates,
