--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h3>Empezamos a trabajar en HTML.</h3>
         <nav>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=HLmGfhxUg-0" target="">opcion 1</li>
-                <li><a href="https://www.youtube.com/watch?v=vCqmDng4MS8" target="">opcion 2</li>
+                <li><a href="https://www.youtube.com/watch?v=HLmGfhxUg-0" target="_blank">opcion 1</li>
+                <li><a href="https://www.youtube.com/watch?v=vCqmDng4MS8" target="_blank">opcion 2</li>
                 <li><a href="#opcion_3" target="">opcion 3</li>                   
                 <li><a href="" target="">opcion 4</li>
             </ul>
