--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=HLmGfhxUg-0" target="_blank">opcion 1</li>
                 <li><a href="https://www.youtube.com/watch?v=vCqmDng4MS8" target="_blank">opcion 2</li>
-                <li><a href="#opcion_3" target="">opcion 3</li>                   
+                <li><a href="#opcion_3" target="_blank">opcion 3</li>                   
                 <li><a href="" target="">opcion 4</li>
             </ul>
         </nav>
