--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="" target="">opcion 4</li>
             </ul>
         </nav>
+        <h3>Secciones:</h3>
         <section>
             <h4>artículo 1</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
