--- a/index.html
+++ b/index.html
@@ -22,24 +22,52 @@
             <ol>
                 <li><a href="https://www.youtube.com/watch?v=HLmGfhxUg-0" target="_blank">opcion 1</li>
                 <li><a href="https://www.youtube.com/watch?v=vCqmDng4MS8" target="_blank">opcion 2</li>
-                <li><a href="#opcion_3" target="_blank">opcion 3</li>
+                <li><a href="#seccion_2" target="_blank">opcion 3</li>
                 <li><a href="" target="">opcion 4</li>
             </ol>
         </nav>
-        <h3>Secciones:</h3>
+        
         <section>
-            <h4>artículo 1</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Accusantium animi tenetur, distinctio mollitia expedita hic
-            quis nemo sit aspernatur consectetur quod explicabo quam cumque
-            eligendi iusto dolores repellat ab. Cupiditate!</p>         
+            <h3>Sección 1</h3>
+
+                <h4>artículo 1</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Accusantium animi tenetur, distinctio mollitia expedita hic
+                quis nemo sit aspernatur consectetur quod explicabo quam cumque
+                eligendi iusto dolores repellat ab. Cupiditate!</p>
+
+                <h4>artículo 2</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Amet tempora fuga dolorem accusamus cupiditate aperiam inventore
+                nesciunt commodi sapiente animi pariatur laudantium sunt, voluptates,
+                facere, obcaecati voluptatem impedit voluptatibus! Placeat!</p>
+
+                <h4>artículo 3</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat,
+                laboriosam cumque. Magni assumenda maiores, odio doloribus eum facilis
+                dolorem possimus, obcaecati laborum tempora maxime necessitatibus 
+                cupiditate ratione. Unde, enim hic?</p>
         </section>
-        <section id="opcion_3">
-            <h4>artículo 2</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Amet tempora fuga dolorem accusamus cupiditate aperiam inventore
-            nesciunt commodi sapiente animi pariatur laudantium sunt, voluptates,
-            facere, obcaecati voluptatem impedit voluptatibus! Placeat!</p>
+        <section id="seccion_2">
+            <h3>Sección 2</h3>
+
+                <h4>artículo 1</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Accusantium animi tenetur, distinctio mollitia expedita hic
+                quis nemo sit aspernatur consectetur quod explicabo quam cumque
+                eligendi iusto dolores repellat ab. Cupiditate!</p>
+
+                <h4>artículo 2</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Amet tempora fuga dolorem accusamus cupiditate aperiam inventore
+                nesciunt commodi sapiente animi pariatur laudantium sunt, voluptates,
+                facere, obcaecati voluptatem impedit voluptatibus! Placeat!</p>
+
+                <h4>artículo 3</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat,
+                laboriosam cumque. Magni assumenda maiores, odio doloribus eum facilis
+                dolorem possimus, obcaecati laborum tempora maxime necessitatibus 
+                cupiditate ratione. Unde, enim hic?</p>
         </section>
     </body>
 </html>
