--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <h3>Empezamos a trabajar en HTML.</h3>
         <nav>
             <ol>
-                <li><a href="https://www.youtube.com/watch?v=HLmGfhxUg-0" target="_blank">opcion 1</li>
-                <li><a href="https://www.youtube.com/watch?v=vCqmDng4MS8" target="_blank">opcion 2</li>
-                <li><a href="#seccion_2" target="_blank">opcion 3</li>
-                <li><a href="" target="">opcion 4</li>
+                <li><a href="#sección_1" target="_blank">opcion 1</li>
+                <li><a href="#seccion_2" target="_blank">opcion 2</li>
+                <li><a href="#seccion_1" target="">opcion 3</li>
+                <li><a href="#seccion_2" target="">opcion 4</li>
             </ol>
         </nav>
         
-        <section>
+        <section id="seccion_1">
             <h3>Sección 1</h3>
 
                 <h4>artículo 1</h4>
@@ -63,7 +63,7 @@
                 nesciunt commodi sapiente animi pariatur laudantium sunt, voluptates,
                 facere, obcaecati voluptatem impedit voluptatibus! Placeat!</p>
 
-                <h4>artículo 3</h4>
+                <h4 id="articulo_3">artículo 3</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat,
                 laboriosam cumque. Magni assumenda maiores, odio doloribus eum facilis
                 dolorem possimus, obcaecati laborum tempora maxime necessitatibus 
