--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <h3>Empezamos a trabajar en HTML.</h3>
         <nav>
             <ol>
-                <li><a href="#sección_1" target="_blank">opcion 1</li>
-                <li><a href="#seccion_2" target="_blank">opcion 2</li>
+                <li><a href="#seccion_2" target="_blank">opcion 1</li>
+                <li><a href="#articulo_3" target="_blank">opcion 2</li>
                 <li><a href="#seccion_1" target="">opcion 3</li>
-                <li><a href="#seccion_2" target="">opcion 4</li>
+                <li><a href="#articulo_3" target="">opcion 4</li>
             </ol>
         </nav>
         
