--- a/index.html
+++ b/index.html
@@ -15,59 +15,60 @@
     <body>
         <header>
             <h1>Hello World</h1>
+            <h2>We are here</h2>
+            <h3>Empezamos a trabajar en HTML.</h3>
+            <nav>
+                <ol>
+                    <li><a href="#seccion_2" target="_blank">opcion 1</li>
+                    <li><a href="#articulo_3" target="_blank">opcion 2</li>
+                    <li><a href="#seccion_1" target="">opcion 3</li>
+                    <li><a href="#articulo_3" target="">opcion 4</li>
+                </ol>
+            </nav>
         </header>
-        <h2>We are here</h2>
-        <h3>Empezamos a trabajar en HTML.</h3>
-        <nav>
-            <ol>
-                <li><a href="#seccion_2" target="_blank">opcion 1</li>
-                <li><a href="#articulo_3" target="_blank">opcion 2</li>
-                <li><a href="#seccion_1" target="">opcion 3</li>
-                <li><a href="#articulo_3" target="">opcion 4</li>
-            </ol>
-        </nav>
-        
-        <section id="seccion_1">
-            <h3>Sección 1</h3>
+        <main>
+            <section id="seccion_1">
+                <article>Sección 1
 
-                <h4>artículo 1:</h4>
+                    <h3>artículo 1:</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Accusantium animi tenetur, distinctio mollitia expedita hic
+                    quis nemo sit aspernatur consectetur quod explicabo quam cumque
+                    eligendi iusto dolores repellat ab. Cupiditate!</p>
+
+                    <h3>artículo 2:</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Amet tempora fuga dolorem accusamus cupiditate aperiam inventore
+                    nesciunt commodi sapiente animi pariatur laudantium sunt, voluptates,
+                    facere, obcaecati voluptatem impedit voluptatibus! Placeat!</p>
+
+                    <h3>artículo 3:</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat,
+                    laboriosam cumque. Magni assumenda maiores, odio doloribus eum facilis
+                    dolorem possimus, obcaecati laborum tempora maxime necessitatibus 
+                    cupiditate ratione. Unde, enim hic?</p>
+                </article>
+            </section>
+            <section id="seccion_2">Sección 1
+
+                <h3>artículo 1:</3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Accusantium animi tenetur, distinctio mollitia expedita hic
                 quis nemo sit aspernatur consectetur quod explicabo quam cumque
                 eligendi iusto dolores repellat ab. Cupiditate!</p>
 
-                <h4>artículo 2:</h4>
+                <h3>artículo 2:</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Amet tempora fuga dolorem accusamus cupiditate aperiam inventore
                 nesciunt commodi sapiente animi pariatur laudantium sunt, voluptates,
                 facere, obcaecati voluptatem impedit voluptatibus! Placeat!</p>
 
-                <h4>artículo 3:</h4>
+                <h3 id="articulo_3">artículo 3:</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat,
                 laboriosam cumque. Magni assumenda maiores, odio doloribus eum facilis
                 dolorem possimus, obcaecati laborum tempora maxime necessitatibus 
                 cupiditate ratione. Unde, enim hic?</p>
-        </section>
-        <section id="seccion_2">
-            <h3>Sección 2</h3>
-
-                <h4>artículo 1:</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Accusantium animi tenetur, distinctio mollitia expedita hic
-                quis nemo sit aspernatur consectetur quod explicabo quam cumque
-                eligendi iusto dolores repellat ab. Cupiditate!</p>
-
-                <h4>artículo 2:</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Amet tempora fuga dolorem accusamus cupiditate aperiam inventore
-                nesciunt commodi sapiente animi pariatur laudantium sunt, voluptates,
-                facere, obcaecati voluptatem impedit voluptatibus! Placeat!</p>
-
-                <h4 id="articulo_3">artículo 3:</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat,
-                laboriosam cumque. Magni assumenda maiores, odio doloribus eum facilis
-                dolorem possimus, obcaecati laborum tempora maxime necessitatibus 
-                cupiditate ratione. Unde, enim hic?</p>
-        </section>
+            </section>
+        <main>
     </body>
 </html>
