--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <h3>Empezamos a trabajar en HTML.</h3>
             <nav>
                 <ol>
-                    <li><a href="#seccion_2" target="_blank">opcion 1</li>
-                    <li><a href="#articulo_3" target="_blank">opcion 2</li>
-                    <li><a href="#seccion_1" target="">opcion 3</li>
-                    <li><a href="#articulo_3" target="">opcion 4</li>
+                    <li><a href="#seccion_2" target="_blank">opcion 1</a></li>
+                    <li><a href="#articulo_3" target="_blank">opcion 2</a></li>
+                    <li><a href="#seccion_1" target="">opcion 3</a></li>
+                    <li><a href="#articulo_3" target="">opcion 4</a></li>
                 </ol>
             </nav>
         </header>
