--- a/index.html
+++ b/index.html
@@ -28,28 +28,34 @@
         </header>
         <main>
             <section id="seccion_1">
-                <article>Sección 1
-
-                    <h4>artículo 1:</h4>
+                <h3>Sección 1</h3>
+                
+                <article>
+                    <h4>artículo 1</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Accusantium animi tenetur, distinctio mollitia expedita hic
                     quis nemo sit aspernatur consectetur quod explicabo quam cumque
                     eligendi iusto dolores repellat ab. Cupiditate!</p>
+                </article>
 
-                    <h4>artículo 2:</h4>
+                <article>            
+                    <h4>artículo 2</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Amet tempora fuga dolorem accusamus cupiditate aperiam inventore
                     nesciunt commodi sapiente animi pariatur laudantium sunt, voluptates,
                     facere, obcaecati voluptatem impedit voluptatibus! Placeat!</p>
+                </article>
 
-                    <h4>artículo 3:</h4>
+                <article>            
+                    <h4>artículo 3</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat,
                     laboriosam cumque. Magni assumenda maiores, odio doloribus eum facilis
                     dolorem possimus, obcaecati laborum tempora maxime necessitatibus 
                     cupiditate ratione. Unde, enim hic?</p>
                 </article>
             </section>
-            <section id="seccion_2">Sección 2
+            <section id="seccion_2">
+                <h3>Sección 2</h3>
 
                 <h4>artículo 1:</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
