--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             <nav>
                 <ol>
                     <li><a href="#seccion_2" target="_blank">opcion 1</a></li>
-                    <li><a href="#articulo_3" target="_blank">opcion 2</a></li>
+                    <li><a href="#section_2_articulo_3" target="_blank">opcion 2</a></li>
                     <li><a href="#seccion_1" target="">opcion 3</a></li>
-                    <li><a href="#articulo_3" target="">opcion 4</a></li>
+                    <li><a href="#section_2_articulo_3" target="">opcion 4</a></li>
                 </ol>
             </nav>
         </header>
         <main>
             <section id="seccion_1">
                 <h3>Sección 1</h3>
-                
+
                 <article>
                     <h4>artículo 1</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -69,7 +69,7 @@
                 nesciunt commodi sapiente animi pariatur laudantium sunt, voluptates,
                 facere, obcaecati voluptatem impedit voluptatibus! Placeat!</p>
 
-                <h4 id="articulo_3">artículo 3:</h4>
+                <h4 id="section_2_articulo_3">artículo 3:</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat,
                 laboriosam cumque. Magni assumenda maiores, odio doloribus eum facilis
                 dolorem possimus, obcaecati laborum tempora maxime necessitatibus 
