ejercicio dos corregido W3C

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="zxx">
     <head>
         <meta charset="UTF-8"/>
         <title>
@@ -21,8 +21,8 @@
                 <ol>
                     <li><a href="#seccion_2" target="_blank">opcion 1</a></li>
                     <li><a href="#section_2_articulo_3" target="_blank">opcion 2</a></li>
-                    <li><a href="#seccion_1" target="">opcion 3</a></li>
-                    <li><a href="#section_2_articulo_3" target="">opcion 4</a></li>
+                    <li><a href="#seccion_1" target=".">opcion 3</a></li>
+                    <li><a href="#section_2_articulo_3" target=".">opcion 4</a></li>
                 </ol>
             </nav>
         </header>
@@ -75,6 +75,6 @@
                 dolorem possimus, obcaecati laborum tempora maxime necessitatibus 
                 cupiditate ratione. Unde, enim hic?</p>
             </section>
-        <main>
+        </main>
     </body>
 </html>
