--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <h1>Hello World</h1>
-            <h2>We are here</h2>
+            <h2>Mi primera página en HTML</h2>
             <h3>Empezamos a trabajar en HTML.</h3>
             <nav>
                 <ol>
