Actividad 3 excepto el arbol de estructura

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <html lang="zxx">
     <head>
         <meta charset="UTF-8"/>
-        <title>
-        Treball de M04
-        </title>
+        <title>Treball de M04</title>
         <meta name="author" content="Christian Mamani">
         <meta name="descripción" content="Esta página web será solamente un trabajo
         académico para el módulo formativo de M04, lenguaje de marcas, del
@@ -27,6 +25,8 @@
             </nav>
         </header>
         <main>
+            <h2>Main</h2>
+            <br>
             <section id="seccion_1">
                 <h3>Sección 1</h3>
 
@@ -77,5 +77,43 @@
                 cupiditate ratione. Unde, enim hic?</p>
             </section>
         </main>
+        <br>
+        <aside>
+            <h2>Publicidad - Aside</h2>
+            <br>
+            <section>
+                <article>
+                    <h4>artículo de publicidad</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Accusantium animi tenetur, distinctio mollitia expedita hic
+                    quis nemo sit aspernatur consectetur quod explicabo quam cumque
+                    eligendi iusto dolores repellat ab. Cupiditate!</p>
+                    <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+                </article>
+
+                <article>
+                    <h4>artículo de publicidad</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Minus explicabo qui beatae blanditiis, saepe laudantium temporibus 
+                    eius esse et voluptas. Tempora facilis numquam voluptas sequi ullam 
+                    recusandae qui quibusdam asperiores!</p>
+                    <a href="https://www.amazon.es/" target="_blank">Amazon</a>
+                </article>
+            </section>
+        </aside>
+        <br>
+        <footer>
+            <br>
+            <h2>Footer</h2>
+            <h3>Politica de privacidad</h3>
+            <3>Mapa de la web</3>
+            <h3>Contacto</h3>
+            <address>
+                <h4><a href="https://www.itb.cat/" target="_blank">Institut tecnològic de Barcerlona</a></h4>
+                <a href="mailto:info@itb.cat" target="_blank">info@itb.cat</a>
+                <h4>C/ aiguablava 121, 08033 Barcelona</h4>
+                <h4>Tlf: 937 070 020</h4>
+            </address>
+        </footer>
     </body>
 </html>
