ejercicio 3 sin arbol de estructura

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 </ol>
             </nav>
         </header>
+        <br>
         <main>
             <h2>Main</h2>
-            <br>
             <section id="seccion_1">
                 <h3>Sección 1</h3>
 
@@ -80,7 +80,6 @@
         <br>
         <aside>
             <h2>Publicidad - Aside</h2>
-            <br>
             <section>
                 <article>
                     <h4>artículo de publicidad</h4>
@@ -109,10 +108,10 @@
             <3>Mapa de la web</3>
             <h3>Contacto</h3>
             <address>
-                <h4><a href="https://www.itb.cat/" target="_blank">Institut tecnològic de Barcerlona</a></h4>
-                <a href="mailto:info@itb.cat" target="_blank">info@itb.cat</a>
-                <h4>C/ aiguablava 121, 08033 Barcelona</h4>
-                <h4>Tlf: 937 070 020</h4>
+                <h5><a href="https://www.itb.cat/" target="_blank">Institut tecnològic de Barcerlona</a></h5>
+                <h5><a href="mailto:info@itb.cat" target="_blank">info@itb.cat</a></h5>
+                <h5>C/ aiguablava 121, 08033 Barcelona</h5>
+                <h5>Tlf: 937 070 020</h5>
             </address>
         </footer>
     </body>
