--- a/from_1_to_3_act_index.html
+++ b/from_1_to_3_act_index.html
@@ -6,7 +6,7 @@
         <title>Treball de M04</title>
         <meta name="author" content="Christian Mamani">
         <meta name="descripción" content="Esta página web será solamente un trabajo
-        académico para el módulo formativo de M04, lenguaje de marcas, del
+        académico para el módulo formativo M04, lenguaje de marcas, del
         Instut Tecnològic de Barcerlona.">
         <link rel="icon" type="image/gif" href="monos_usando_telefonos.jpg">
     </head>
